--- a/_flex.scss
+++ b/_flex.scss
@@ -15,6 +15,8 @@ body.flex {
         flex-flow: row nowrap;
         section:nth-child(1) {
             flex: 0 0 95px;
+            align-self: flex-start;
+            height: 40px;
         }
         section:nth-child(2) {
             flex: 1 0 200px;
@@ -27,10 +29,18 @@ body.flex {
         display: flex;
         flex-flow: row nowrap;
         flex: 1 auto;
-        section:nth-child(1) {
+        >section:nth-child(1) {
             flex: 1;
+            display: flex;
+            flex-flow: row wrap;
+            align-content: space-around;
+            >section {
+                flex: 1 1 40%;
+                height: 40px;
+                background: #2465a7;
+            }
         }
-        section:nth-child(2) {
+        >section:nth-child(2) {
             flex: 3;
             .entry {
                 margin: 12px 8px;
